created basic structure

--- a/website/index.html
+++ b/website/index.html
@@ -1,6 +1,16 @@
-<html>
-<header><title>Hello World</title></header>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <meta content="ie=edge" http-equiv="X-UA-Compatible">
+    <link href="assets/css/style.css" rel="stylesheet">
+    <title>CoronaTracker App</title>
+</head>
 <body>
-Hello world!!
+<header class="showcase">
+    <div class="content">
+        <img alt="CoronaTracker App" class="logo" src="assets/img/logo.png">
+    </div>
+</header>
 </body>
 </html>
