--- a/website/index.html
+++ b/website/index.html
@@ -4,13 +4,79 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <link href="assets/css/style.css" rel="stylesheet">
+    <script crossorigin="anonymous" src="https://kit.fontawesome.com/af1bc480b6.js"></script>
     <title>CoronaTracker App</title>
 </head>
 <body>
 <header class="showcase">
     <div class="content">
-        <img alt="CoronaTracker App" class="logo" src="assets/img/logo.png">
+        <img alt="CoronaTracker" class="logo" src="assets/img/logo.png">
+        <div class="title">
+            CoronaTracking App
+        </div>
+
+        <div class="text">
+            Die Community, die dich gesund hält!
+        </div>
     </div>
 </header>
+
+<!-- Services -->
+<section class="services">
+    <div class="container grid-3 center">
+        <div>
+            <i class="fas fa-first-aid fa-3x"></i>
+            <h3>Self-report Gesundheitstatus</h3>
+            <p>Mit nur einem Klick können SIE Leben retten, in dem Sie sich melden, als COVID-19 positiv.</p>
+        </div>
+        <div>
+            <i class="fas fa-bell fa-3x"></i>
+            <h3>Echtzeit-Benachrichtigungen</h3>
+            <p>Sie werden sofort benachrichtigt, wenn einer Ihrer Freunde oder eine andere Person, mit der Sie in
+                Kontakt waren, COVID-19 positiv ist.</p>
+        </div>
+        <div>
+            <i class="fas fa-map fa-3x"></i>
+            <h3>Anonymisierte Karte der betroffenen Zonen.</h3>
+            <p>Erfahren Sie, welche Zonen stärker vom Virus COVID-19 betroffen sind.</p>
+        </div>
+    </div>
+</section>
+
+<!-- About -->
+<section class="about bg-light">
+    <div class="container">
+        <div class="grid-2">
+            <div class="center">
+                <i class="fas fa-laptop-code fa-10x"></i>
+            </div>
+            <div>
+                <h3>Über dieses Projekt</h3>
+                <p>Die Herausforderung besteht darin, Kontaktpersonen zweiten und dritten Grades automatisiert zu
+                    ermitteln, so dass diese freiwillige Quarantäne bleiben können. Den Zustand "positiv getestet" und
+                    "geheilt" (immun) zu kennen, wird besonders relevant, wenn die Social-Distancing-Maßnahmen wieder
+                    gelockert werden.</p>
+                <p>Interesse geweckt? Schauen Sie unser Video, und laden Sie unsere App herunter!</p>
+                <iframe allowFullScreen="allowFullScreen" allowtransparency="true" frameborder="0" height="250"
+                        src="https://www.youtube.com/embed/No1px4tD-9k?ecver=1&amp;iv_load_policy=3&amp;yt:stretch=16:9&amp;autohide=1&amp;color=red&amp;width=432&amp;width=432"
+                        width="432"></iframe>
+                <div class="grid-2">
+                    <div>
+                        <p><a href="#" target="_blank"><img height="58px" src="assets/img/google-play-badge.png"
+                                                            width="150px"></a></p>
+                    </div>
+                    <div>
+                        <p><a href="#" target="_blank"><img height="49px" src="assets/img/apple.png" width="150px"></a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<footer class="center bg-dark">
+    <p>CoronaTracker App &copy; 2020</p>
+</footer>
 </body>
 </html>
